environment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-svc
  namespace: flask-app
spec:
  selector:
    app: flask-devops-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
